fix: fixing stuff in the projects

--- a/code/projeto-2/docker-compose.yml
+++ b/code/projeto-2/docker-compose.yml
@@ -1,21 +1,21 @@
-version: '3.8'
-
 services:
   db:
-    image: postgres:15
+    image: postgres:17
     environment:
       - POSTGRES_USER=todo_user
       - POSTGRES_PASSWORD=todo_pass
       - POSTGRES_DB=todo_db
+    restart: unless-stopped
+    ports:
+      - "5432:5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
       - ./code/projeto-2/init.sql:/docker-entrypoint-initdb.d/init.sql:ro
-    networks:
-      - todo-net
 
   app:
     build:
-      context: ./code/projeto-2
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     environment:
@@ -26,21 +26,6 @@ services:
       - PGPORT=5432
     depends_on:
       - db
-    networks:
-      - todo-net
-
-
-  web:
-    build:
-      context: ./code/projeto-3
-    ports:
-      - "8080:80"
-    networks:
-      - todo-net
 
 volumes:
   pgdata:
-
-networks:
-  todo-net:
-    driver: bridge
