--- a/code/projeto-3/package.json
+++ b/code/projeto-3/package.json
@@ -8,11 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "patch-package": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@vitejs/plugin-react": "^4.0.0",
+    "vite": "^5.0.0"
   }
 }
