--- a/code/projeto-2/Dockerfile
+++ b/code/projeto-2/Dockerfile
@@ -1,15 +1,13 @@
-FROM node:18-alpine
+FROM node:22-alpine
 
-WORKDIR /usr/src/app
+WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install --production
+RUN npm install
 
 COPY . .
 
 EXPOSE 3000
-
-ENV NODE_ENV=production
 
 CMD ["node", "src/app.js"]
