--- a/code/projeto-2/package.json
+++ b/code/projeto-2/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "projeto-2",
+  "name": "projeto-1",
   "version": "1.0.0",
-  "description": "Simple todo app for docker workshop (Postgres + Express)",
+  "description": "A basic Express project to explain Docker basics.",
   "main": "src/app.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js"
+    "start": "nodemon -L src/app.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.11.0"
-  },
-  "devDependencies": {
+    "express": "^4.17.1",
     "nodemon": "^3.1.10"
   },
-  "engines": {
-    "node": ">=14"
-  }
+  "author": "",
+  "license": "ISC"
 }
