--- a/code/projeto-3/package.json
+++ b/code/projeto-3/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "projeto-3",
+  "name": "projeto-2",
   "version": "1.0.0",
-  "private": true,
+  "description": "Simple todo app for docker workshop (Postgres + Express)",
+  "main": "src/app.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "dependencies": {
-    "patch-package": "^8.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "express": "^4.18.2",
+    "pg": "^8.11.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "nodemon": "^3.1.10"
+  },
+  "engines": {
+    "node": ">=14"
   }
 }
