--- a/code/projeto-3/docker-compose.yml
+++ b/code/projeto-3/docker-compose.yml
@@ -2,29 +2,34 @@ services:
   db:
     image: postgres:17
     environment:
-      - POSTGRES_USER=todo_user
-      - POSTGRES_PASSWORD=todo_pass
-      - POSTGRES_DB=todo_db
-    restart: unless-stopped
+      POSTGRES_USER: user
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: projeto-3-db
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
-
+      - db-data:/var/lib/postgresql/data
+    restart: unless-stopped
+    container_name: projeto-3-db
+    
   app:
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "3000:3000"
     environment:
-      - PGHOST=db
-      - PGUSER=todo_user
-      - PGPASSWORD=todo_pass
-      - PGDATABASE=todo_db
-      - PGPORT=5432
+      DB_HOST: db
+      DB_USER: user
+      DB_PASSWORD: password
+      DB_NAME: projeto-3-db
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./src:/app/src
     depends_on:
-      - db
+      db:
+        condition: service_started
+    restart: unless-stopped
+    container_name: projeto-3-app
 
 volumes:
-  pgdata:
+  db-data:
