--- a/code/projeto-3/docker-compose.yml
+++ b/code/projeto-3/docker-compose.yml
@@ -1,17 +1,15 @@
 services:
   db:
     image: postgres:17
-    environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: projeto-3-db
+    env_file:
+      - ./.env
     ports:
       - "5432:5432"
     volumes:
       - db-data:/var/lib/postgresql/data
     restart: unless-stopped
     container_name: projeto-3-db
-    
+
   app:
     build:
       context: .
