--- a/code/projeto-3/package.json
+++ b/code/projeto-3/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon src/app.js"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "pg": "^8.11.0"
   },
